--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
     "history": "^5.0.0",
+    "immer": "^8.0.0",
     "polished": "^4.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.11.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "styled-components": "^5.0.1"
+    "react-toastify": "^6.1.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.0.1",
+    "uuidv4": "^6.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
