--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "history": "^5.0.0",
     "immer": "^8.0.0",
     "polished": "^4.0.4",
